; ModuleID = '/home/carl/AnghaBench/freebsd/sys/amd64/vmm/intel/extr_vmx_msr.c_nehalem_cpu.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/amd64/vmm/intel/extr_vmx_msr.c_nehalem_cpu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@cpu_id = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @nehalem_cpu to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nehalem_cpu() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = load i32, i32* @cpu_id, align 4
  %5 = call i32 @CPUID_TO_FAMILY(i32 %4)
  store i32 %5, i32* %2, align 4
  %6 = load i32, i32* @cpu_id, align 4
  %7 = call i32 @CPUID_TO_MODEL(i32 %6)
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* %2, align 4
  %9 = icmp eq i32 %8, 6
  br i1 %9, label %10, label %15

10:                                               ; preds = %0
  %11 = load i32, i32* %3, align 4
  switch i32 %11, label %13 [
    i32 26, label %12
    i32 30, label %12
    i32 31, label %12
    i32 46, label %12
  ]

12:                                               ; preds = %10, %10, %10, %10
  store i32 1, i32* %1, align 4
  br label %16

13:                                               ; preds = %10
  br label %14

14:                                               ; preds = %13
  br label %15

15:                                               ; preds = %14, %0
  store i32 0, i32* %1, align 4
  br label %16

16:                                               ; preds = %15, %12
  %17 = load i32, i32* %1, align 4
  ret i32 %17
}

declare dso_local i32 @CPUID_TO_FAMILY(i32) #1

declare dso_local i32 @CPUID_TO_MODEL(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
